<resources>
    <string name="app_name">Pick-up!</string>
    <string name="detailed_search">Detailed Search</string>
    <string name="quick_search">Quick Search</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string-array name="games_array">
        <item>Game Selection</item>
        <item>Basketball</item>
        <item>Badminton</item>
        <item>Football</item>
        <item>Golf</item>
        <item>Hockey</item>
        <item>Raquetball</item>
        <item>Rugby</item>
        <item>Soccer</item>
        <item>Spike Ball</item>
        <item>Soft Ball</item>
        <item>Ultimate Frisbee</item>
        <item>Volley Ball</item>
        <item>Walley Ball</item>
        <item>Other</item>
    </string-array>
    <string-array name ="num_players_array">
        <item>Players</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="create_game">Create a Game</string>
    <string name="join">Join</string>
</resources>
