<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pickup.daniel.pick_up.MainActivity">

    <Spinner
        android:id="@+id/gamesSpinner"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="70dp"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/detailed_search"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/gamesSpinner"
        app:layout_constraintRight_toRightOf="@+id/gamesSpinner"
        app:layout_constraintTop_toBottomOf="@+id/findAGame" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onDateButton"
        android:text="@string/date"
        app:layout_constraintLeft_toLeftOf="@+id/gamesSpinner"
        app:layout_constraintRight_toRightOf="@+id/gamesSpinner"
        app:layout_constraintTop_toBottomOf="@+id/numPlayersSpinner" />

    <Button
        android:id="@+id/timeButton"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onTimeButton"
        android:text="@string/time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateButton" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="192dp"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="0dp" />

    <CheckBox
        android:id="@+id/gameTypeCheckBox"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onCheckboxClicked"
        app:layout_constraintLeft_toRightOf="@+id/gamesSpinner"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/dateCheckBox"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:onClick="onCheckboxClicked"
        app:layout_constraintBaseline_toBaselineOf="@+id/dateButton"
        app:layout_constraintLeft_toRightOf="@+id/dateButton" />

    <CheckBox
        android:id="@+id/timeCheckBox"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:onClick="onCheckboxClicked"
        app:layout_constraintBaseline_toBaselineOf="@+id/timeButton"
        app:layout_constraintLeft_toRightOf="@+id/timeButton" />

    <CheckBox
        android:id="@+id/numPlayersCheckBox"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toEndOf="@+id/numPlayersSpinner"
        app:layout_constraintTop_toBottomOf="@+id/gamesSpinner" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="65dp"
        android:layout_height="37dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:text="@string/quick_search"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintLeft_toLeftOf="@+id/gameTypeCheckBox"
        app:layout_constraintRight_toRightOf="@+id/gameTypeCheckBox" />

    <Button
        android:id="@+id/button3"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/create_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ListView
        android:id="@+id/gamesListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numGames" />

    <Spinner
        android:id="@+id/numPlayersSpinner"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamesSpinner" />

    <TextView
        android:id="@+id/findAGame"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="Find A Game"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Find A Game" />

    <TextView
        android:id="@+id/numGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="35 Games"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/gamesListView"
        app:layout_constraintStart_toStartOf="@+id/gamesListView"
        app:layout_constraintTop_toBottomOf="@+id/findAGame" />

</android.support.constraint.ConstraintLayout>
